[gd_scene load_steps=4 format=3 uid="uid://sb6dv6fa1fl"]

[ext_resource type="Script" path="res://ui/phone/equipment_panel/equipment_panel.gd" id="1_f47ep"]
[ext_resource type="PackedScene" uid="uid://c6k2jpfxwbkvq" path="res://ui/equip_panel/equip_panel.tscn" id="1_s15xe"]
[ext_resource type="PackedScene" uid="uid://cf102rf2d2ahv" path="res://ui/widgets/coin_panel.tscn" id="2_s7f3i"]

[node name="EquipmentPanel" type="MarginContainer"]
size_flags_vertical = 3
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 10
script = ExtResource("1_f47ep")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CoinPanel" parent="VBoxContainer" instance=ExtResource("2_s7f3i")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipPanel" parent="VBoxContainer" instance=ExtResource("1_s15xe")]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
